Add Float Parsing

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -153,6 +153,21 @@ added_game = Added Game: %s
 adding_player = Adding Player: %s
 added_player = Added Player: %s
 removed_player = Removed Player: %s
+common_task_count_logged = # Common Tasks: %s
+long_task_count_logged = # Long Tasks: %s
+short_task_count_logged = # Short Tasks: %s
+emergency_meeting_count_logged = # Emergency Meetings: %s
+kill_distance_logged = Kill Distance: %s
+discussion_time_logged = Discussion Time: %s
+vote_time_logged = Vote Time: %s
+default_settings_logged = Default Settings: %s
+payload_length_logged = Payload Length: %s
+game_options_version_logged = Game Options Version: %s
+emergency_cooldown_logged = Emergency Cooldown: %s
+player_speed_modifier_logged = Player Speed Modifier: %s
+crewmate_light_modifier_logged = Crewmate Light Modifier: %s
+imposter_light_modifier_logged = Imposter Light Modifier: %s
+kill_cooldown_logged = Kill Cooldown: %s
 
 # Registering Plugins
 registering_plugin = Plugin %s found; Registering plugin!
