Added Minor Changes To Allow Usability of Region Command To Test Webhooks

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -30,6 +30,9 @@ region_file_generator_command_default_display_name = Crewmate
 region_file_generator_command_unknown_host = Unknown Host: %s
 region_file_generator_command_failed_create_file = Failed to Create: %s
 region_file_generator_command_success_create_file = Created File at: %s
+region_file_generator_command_settings_simple = Saved File With Settings: %s:%d
+region_file_generator_command_settings_simple_named = Saved File With Settings: %s (%s:%d)
+region_file_generator_command_invalid_port = Invalid Port Number!!!
 
 # Help Command
 help_command = help
