Currently Broke Game Settings, but Will Be Worth Fixing It

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -110,6 +110,7 @@ invalid_bytes_null_exception = Check to make sure you assigned your bytes variab
 uncaught_server_side_exception = Uncaught Server Side Exception: %s
 
 # Invalid Packets
+game_settings_length_mismatch = Game Settings Specified Length Is Longer Than Payload Length
 game_packet_invalid_size = Game Packet Invalid Size
 game_packet_unknown_type = Unknown Game Packet Type!!! Unhandled Custom Client? Wrong Version?
 search_request_invalid_size = Search Request Packet Invalid Size
@@ -132,6 +133,7 @@ missing_display_name_handshake = Missing Display Name!!!
 display_name_too_long = Can only use up to 10 letters for your display name. :(
 game_packet_payload_length_too_long = Gotta start somewhere with your custom client. Eh. Well, your payload length is too long.
 invalid_number_of_bytes_exact = The byte[] needs to contain only %d bytes.
+invalid_number_of_bytes_minimum = The byte[] needs to be at least %d bytes.
 fragment_packet_not_supported = Fragment Packet Not Supported!!!
 invalid_name_close_connection = Invalid Name!!!
 invalid_max_players = Max Player Count Can Only Be Between %d and %d, not %d!!!
