--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -138,6 +138,7 @@ fragment_packet_not_supported = Fragment Packet Not Supported!!!
 invalid_name_close_connection = Invalid Name!!!
 invalid_max_players = Max Player Count Can Only Be Between %d and %d, not %d!!!
 invalid_imposter_count = Imposter Count Can Only Be Between %d and %d, not %d!!!
+unsupported_game_settings_version = Unsupported Game Settings Version!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
