Saving Current Work - Calling It A Night

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -139,6 +139,7 @@ invalid_name_close_connection = Invalid Name!!!
 invalid_max_players = Max Player Count Can Only Be Between %d and %d, not %d!!!
 invalid_imposter_count = Imposter Count Can Only Be Between %d and %d, not %d!!!
 unsupported_game_settings_version = Unsupported Game Settings Version!!!
+unknown_game_data_type = Unknown Game Data Type!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -249,6 +250,15 @@ bad_connection = Bad Connection
 game_not_found_two = Game Not Found (Type 2)
 room_closed = Room Closed
 server_overloaded = Server Overloaded
+
+# Game Data Type
+component_data = Component Data
+rpc = RPC
+spawn = Spawn
+despawn = Despawn
+scene_change = Scene Change
+ready = Ready
+change_settings = Change Settings
 
 # Lobby Settings
 public_game = Public Game
