Got to Previous Point of Pre-Rewrite, but Excluding Hardcoded Search Working

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -285,6 +285,7 @@ timing_file_output_plural = Timing [%s]: %s milliseconds
 nonce_value = Nonce Value: %s
 
 # Color Enum
+color_unknown = Unknown Color
 color_red = Red
 color_blue = Blue
 color_dark_green = Green
@@ -299,6 +300,7 @@ color_cyan = Cyan
 color_light_green = Light Green
 
 # Skin Enum
+skin_unknown = Unknown Skin
 skin_none = None
 skin_astronaut = Astronaut
 skin_captain = Captain
@@ -317,6 +319,7 @@ skin_winter = Winter
 skin_archaeologist = Archaeologist
 
 # Pet Enum
+pet_unknown = Unknown Pet
 pet_none = None
 pet_alien = Alien
 pet_crewmate = Crewmate
@@ -330,6 +333,7 @@ pet_squig = Squig
 pet_bedcrab = Bedcrab
 
 # Hat Enum
+hat_unknown = Unknown Hat
 hat_none = None
 hat_astronaut = Astronaut
 hat_baseball_cap = Baseball Cap
