Untested Statistics Code

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -62,6 +62,10 @@ packed_ints_string = Unpacked Int: %s
 packed_ints_invalid_hex = Hex Number Invalid!!!
 packed_ints_invalid_int = Int Invalid!!!
 
+# Statistics Command
+statistics_command = statistics
+statistics_null = Statistics Null!!! Use `bug` to send a report!!!
+
 # Help Description Commands
 gamecode_command_help = Convert Game Code (Room Code) to Bytes or String
 exit_command_help = Shuts Down the Server!!!
@@ -72,6 +76,7 @@ help_command_help = Displays This Output
 ssh_command_help = Test sshd server!!!
 plugin_command_help = Plugin Info!!!
 packed_ints_command_help = Test packing and unpacking ints!!!
+statistics_command_help = Prints Server Statistics!!!
 
 # Server Startup/Shutdown
 server_name = Crewmate
